--- a/SwiftyCompanion/Base.lproj/Main.storyboard
+++ b/SwiftyCompanion/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="irP-Dj-Pg7">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,26 +17,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dSS-ee-lA2">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f3Z-SO-pnh">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="42logo" translatesAutoresizingMaskIntoConstraints="NO" id="6aB-EC-RFU">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YtF-XK-qcl">
-                                                <rect key="frame" x="108" y="368.5" width="159" height="30"/>
+                                                <rect key="frame" x="108" y="378.5" width="159" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="159" id="wAM-zE-mdn"/>
                                                     <constraint firstAttribute="height" constant="30" id="zgc-GU-yxZ"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83S-r1-JUz">
-                                                <rect key="frame" x="163.5" y="418.5" width="48" height="30"/>
+                                                <rect key="frame" x="163.5" y="428.5" width="48" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="48" id="dFy-iE-X3B"/>
                                                     <constraint firstAttribute="height" constant="30" id="tse-Lj-Ayn"/>
@@ -91,6 +88,66 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138.40000000000001" y="112.89355322338831"/>
+        </scene>
+        <!--Info Page View Controller-->
+        <scene sceneID="Bhi-TW-ncn">
+            <objects>
+                <viewController id="irP-Dj-Pg7" customClass="InfoPageViewController" customModule="SwiftyCompanion" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mwD-DA-eey">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1334"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DT4-fl-Giy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1334"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVD-97-bmW">
+                                        <rect key="frame" x="67" y="269" width="240" height="600"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="600" id="35G-XF-Ihb"/>
+                                            <constraint firstAttribute="width" constant="240" id="NpQ-Ym-ddC"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Mw-4m-Y09">
+                                        <rect key="frame" x="166" y="1069" width="42" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="Q9P-Ur-CJU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5Mw-4m-Y09" firstAttribute="top" secondItem="CVD-97-bmW" secondAttribute="bottom" constant="200" id="2d4-UQ-LCj"/>
+                                    <constraint firstItem="oLR-Zk-8Dm" firstAttribute="trailing" secondItem="5Mw-4m-Y09" secondAttribute="trailing" constant="167" id="5hm-Ib-FIv"/>
+                                    <constraint firstItem="5Mw-4m-Y09" firstAttribute="leading" secondItem="oLR-Zk-8Dm" secondAttribute="leading" constant="166" id="9rW-Sf-1df"/>
+                                    <constraint firstItem="5Mw-4m-Y09" firstAttribute="bottom" secondItem="1y4-Kg-bwX" secondAttribute="bottom" id="CIc-gx-hkf"/>
+                                    <constraint firstItem="CVD-97-bmW" firstAttribute="top" secondItem="1y4-Kg-bwX" secondAttribute="top" constant="269" id="QZf-hv-zdO"/>
+                                    <constraint firstItem="CVD-97-bmW" firstAttribute="leading" secondItem="1y4-Kg-bwX" secondAttribute="leading" constant="67" id="g9S-y7-gpW"/>
+                                    <constraint firstItem="CVD-97-bmW" firstAttribute="trailing" secondItem="1y4-Kg-bwX" secondAttribute="trailing" constant="307" id="o7s-2N-HhG"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="1y4-Kg-bwX"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="oLR-Zk-8Dm"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="DT4-fl-Giy" firstAttribute="bottom" secondItem="bm3-GP-IBa" secondAttribute="bottom" id="2Ve-yl-ucY"/>
+                            <constraint firstItem="DT4-fl-Giy" firstAttribute="leading" secondItem="bm3-GP-IBa" secondAttribute="leading" id="7df-bO-OCd"/>
+                            <constraint firstItem="DT4-fl-Giy" firstAttribute="trailing" secondItem="bm3-GP-IBa" secondAttribute="trailing" id="BP1-8S-QcM"/>
+                            <constraint firstItem="DT4-fl-Giy" firstAttribute="top" secondItem="bm3-GP-IBa" secondAttribute="top" id="oDX-oh-t5a"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bm3-GP-IBa"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="1334"/>
+                    <connections>
+                        <outlet property="scrollView" destination="DT4-fl-Giy" id="vrt-42-nlB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkC-AX-VHJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="980" y="413"/>
         </scene>
     </scenes>
     <resources>
